--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -1,8 +1,32 @@
 #!/bin/bash -x
+
+#===============================================================================
+#
+# Hardening
+#
+#-------------------------------------------------------------------------------
+
 yum -y update --security
+amazon-linux-extras install epel -y
+pip3 install ansible
+ansible-galaxy install geerlingguy.security
 
-# initiate hardening here
+cat > /opt/playbook.yaml << EOF
+- hosts: localhost
+  gather_facts: true
+  roles:
+    - geerlingguy.security
+EOF
 
+ansible-playbook /opt/playbook.yaml
+#===============================================================================
+
+
+#===============================================================================
+#
+# Sync Users
+#
+#-------------------------------------------------------------------------------
 mkdir -p /usr/bin/bastion/
 cat > /usr/bin/bastion/sync_users << 'EOF'
 #!/usr/bin/env bash
