--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -1,7 +1,9 @@
 #!/bin/bash -x
-yum -y update --security
 
-# initiate hardening here
+
+#-------------------------------------------------------------------------------
+# Sync Users
+#-------------------------------------------------------------------------------
 
 mkdir -p /usr/bin/bastion/
 cat > /usr/bin/bastion/sync_users << 'EOF'
@@ -63,3 +65,26 @@ crontab ~/mycron
 rm ~/mycron
 
 /usr/bin/bastion/sync_users
+
+
+#-------------------------------------------------------------------------------
+# Hardening
+#-------------------------------------------------------------------------------
+
+yum -y update --security
+amazon-linux-extras install epel -y   # Required for Ansible role geerlingguy.security
+pip3 install ansible
+ansible-galaxy install geerlingguy.security
+
+cat > ~/playbook.yaml << EOF
+- hosts: localhost
+  gather_facts: true
+  vars:
+    security_sudoers_passwordless: ${sudoers}
+  roles:
+    - geerlingguy.security
+EOF
+
+ansible-playbook ~/playbook.yaml
+
+
