install updated SSM agent

--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -73,6 +73,10 @@ rm ~/mycron
 
 yum -y update --security
 amazon-linux-extras install epel -y   # Required for Ansible role geerlingguy.security
+
+# Update SSM Agent
+yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
+
 pip3 install ansible
 ansible-galaxy install geerlingguy.security
 
