feat: install convenience packages (#30)
https://github.com/ordinaryexperts/terraform-aws-hardened-bastion/pull/30

--- a/user_data.sh.tmpl
+++ b/user_data.sh.tmpl
@@ -74,9 +74,16 @@ rm ~/mycron
 yum -y update --security
 amazon-linux-extras install epel -y   # Required for Ansible role geerlingguy.security
 
+
 # Update SSM Agent
 yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
 
+
+# Convenience packages
+yum install -y byobu htop postgresql telnet vim
+
+
+# Ansible
 pip3 install ansible
 ansible-galaxy install geerlingguy.security
 
@@ -90,5 +97,3 @@ cat > ~/playbook.yaml << EOF
 EOF
 
 ansible-playbook ~/playbook.yaml
-
-
